# stm32_env

./: .gitignore  .mxproject  CMakeLists.txt  CMakePresets.json  LED_FLIP.ioc  LICENSE  README.md  STM32F103XX_FLASH.ld  openocd.cfg
Core/Inc/: main.h
Core/Src/: gpio.c  main.c  stm32f1xx_hal_msp.c
cmake/stm32cubemx/: CMakeLists.txt
src/led_flip/: CMakeLists.txt  led_flip.c  led_flip.h
